--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+Adding changes before rebasing conflicts
+-->
 <head>
 	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
