Adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Some silly changes from master branch
+Adding changes before rebasing conflicts. made changes to this file for trouble
 -->
 <head>
 	<title>A very respectful website</title>
@@ -21,7 +21,6 @@ Some silly changes from master branch
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git training 2022</p>
 	</footer>
 </body>
 </html>
