master branch conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Adding changes before rebasing conflicts
+Some silly changes from master branch
 -->
 <head>
 	<title>A very respectful website</title>
@@ -17,7 +17,7 @@ Adding changes before rebasing conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			I am not sure about anything
+			Silly Changes
 		</p>
 	</main>
 	<footer class="container">
