Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Adding changes before rebasing conflicts. made changes to this file for trouble
+Adding changes before rebasing conflicts. made changes to this file for trouble, in a little repo
 -->
 <head>
 	<title>A very respectful website</title>
