local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@ Adding changes before rebasing conflicts. made changes to this file for trouble,
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Silly Changes
+			Git training. All rights reserved
 		</p>
 	</main>
 	<footer class="container">
