--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Adding changes before rebasing conflicts. made changes to this file for trouble, in a little repo
 -->
 <head>
-	<title>Updating title for stashing</title>
+	<title>Updating title for stashing v1.2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
